--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -153,7 +153,12 @@ li>a:hover{
 }
 
 .message{
+     color: white;
+     font-size: medium;
+     font-weight: bold;
+ }
+.catalogmessage{
     color: #34003E;
-    font-size: large;
+    font-size: medium;
     font-weight: bold;
 }
